Phase 2: Added links for sports buttons on home page and fixed their spacing. Removed text links from home page. Fixed Page.css to format like home page. Fleshed out GameBar and added dummy data to NFL page to display a game.

--- a/my-app/src/components/GameBar.css
+++ b/my-app/src/components/GameBar.css
@@ -5,17 +5,22 @@
     color: #ffffff;
     border-radius: 10px;
     font-family: Arial;
+    padding: 10px;
     max-height: 150px;
     min-height: 150px;
     max-width: 800px;
     min-width: 800px;
+    cursor: pointer;
+}
+.gb-btn:hover {
+    background-color: #a1a1a1;
 }
 .gb-column {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.gb-img {
+.gb-logo {
     display: block;
     height: 100px;
     width: 100px;
